// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiHeaderLogo is rendered 1`] = `
<a
  class="kuiHeaderLogo testClass1 testClass2"
>
  <svg
    class="kuiIcon kuiHeaderLogo__icon kuiIcon--medium"
  >
    <title>
      Go to Kibana home page
    </title>
    <use
      href="#logo"
    />
  </svg>
</a>
`;

exports[`KuiHeaderLogo renders href 1`] = `
<a
  class="kuiHeaderLogo"
  href="#"
>
  <svg
    class="kuiIcon kuiHeaderLogo__icon kuiIcon--medium"
  >
    <title>
      Go to Kibana home page
    </title>
    <use
      href="#logo"
    />
  </svg>
</a>
`;
